@@ -106,17 +106,29 @@ rdataToString() {
 		sb.append(host);
 		sb.append(" ");
 		sb.append(admin);
-		sb.append(" (\n\t\t\t\t\t");
-		sb.append(serial & 0xFFFFFFFFL);
-		sb.append("\t; serial\n\t\t\t\t\t");
-		sb.append(refresh);
-		sb.append("\t; refresh\n\t\t\t\t\t");
-		sb.append(retry);
-		sb.append("\t; retry\n\t\t\t\t\t");
-		sb.append(expire);
-		sb.append("\t; expire\n\t\t\t\t\t");
-		sb.append(minimum);
-		sb.append(" )\t; minimum");
+		if (Options.check("multiline")) {
+			sb.append(" (\n\t\t\t\t\t");
+			sb.append(serial & 0xFFFFFFFFL);
+			sb.append("\t; serial\n\t\t\t\t\t");
+			sb.append(refresh);
+			sb.append("\t; refresh\n\t\t\t\t\t");
+			sb.append(retry);
+			sb.append("\t; retry\n\t\t\t\t\t");
+			sb.append(expire);
+			sb.append("\t; expire\n\t\t\t\t\t");
+			sb.append(minimum);
+			sb.append(" )\t; minimum");
+		} else {
+			sb.append(serial & 0xFFFFFFFFL);
+			sb.append(" ");
+			sb.append(refresh);
+			sb.append(" ");
+			sb.append(retry);
+			sb.append(" ");
+			sb.append(expire);
+			sb.append(" ");
+			sb.append(minimum);
+		}
 	}
 	return sb.toString();
 }
